# bazel-scala-test

./: .bazelproject  .bazelrc  .travis.yml  README.md  WORKSPACE  jvm_deps_install.json
src/main/scala/CirceSample/: BUILD.bazel  CirceSample.scala
src/main/scala/Sample/: A.scala  BUILD
src/test/scala/Sample/: ATest.scala  BUILD
tools/: jvm_deps.bzl
